energy-api/deploy/k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: homewizard-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homewizard-energy-api
  namespace: homewizard-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homewizard-energy-api
  template:
    metadata:
      labels:
        app: homewizard-energy-api
    spec:
      containers:
      - name: energy-api
        image: fgheysels/homewizard-energy-api:1.0.0-arm64
---
apiVersion: v1
kind: Service
metadata:
  name: homewizard-energy-api-svc
  namespace: homewizard-data
spec:
  type: ClusterIP
  selector:
    app: homewizard-energy-api
  ports:
    - port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homewizard-energy-api-rewriterule
  namespace: homewizard-data
spec:
  replacePathRegex:
    regex: "^/energy-api/(.*)"
    replacement: "/api/$1"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homewizard-energy-api-http
  namespace: homewizard-data
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/energy-api/`)
      kind: Rule
      middlewares:
        - name: homewizard-energy-api-rewriterule
      services:
        - kind: Service
          name: homewizard-energy-api-svc
          port: 8080
